--- a/src/app/shared/drop-down-button/drop-down-button.component.css
+++ b/src/app/shared/drop-down-button/drop-down-button.component.css
@@ -112,3 +112,8 @@ button {
   margin: 0 15px;
   padding-top: 35px;
 }
+
+.multi-select-dd > div {
+  max-height: 250px;
+  overflow-y: auto;
+}
