--- a/src/app/shared/multi-select-list/multi-select-list.component.css
+++ b/src/app/shared/multi-select-list/multi-select-list.component.css
@@ -38,8 +38,3 @@
   width: 8px;
   height: 3px;
 }
-
-.multi-select-holder {
-  max-height: 250px;
-  overflow-y: auto;
-}
